--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <hr/>
     <main>
         <section>
-            <img src="https://via.placeholder.com/750x300.pngC/O https://placeholder.com/">
+            <img src="https://i.pinimg.com/736x/66/8e/96/668e966958059c13bdaec1cf24d8cd6a--tree-roots-norse-mythology.jpg" alt="Norse squirrel">
             <h4>Did you know?</h4>
             <p>
                 In Norse mythology a squirrel named "Ratatoskr" Was the carrier of information and would climb both up and down the tree of life, to deliver news from the eagle up top and the serpant who would dwell below near the roots of the tree of life.
@@ -41,24 +41,25 @@
         </section>
         <section>
             <h2>Meet The Squirrels</h2>
-            <img src="https://via.placeholder.com/80x90.pngC/O https://placeholder.com/">
+            <img src="https://user-images.githubusercontent.com/99520664/167271869-285510bb-dd84-4729-847d-6cfbc7eaedef.jpg" height="500" width="500" alt="crazy girl squirrel">
             <p>
                 Name: Crazy Girl<br>
                 Age: 2<br>
-                About: Crazy is a very lively dominant female who first got her name because as a kit she was the most playful of the bunch, although she does still play she is known as an "alpha" squirrel.
+                About: Crazy girl is a very lively, dominant female who first got her name because as a kit she was the most playful of the bunch, although she does still play she is known as an "alpha" squirrel.
              </p>
-            <img src="https://via.placeholder.com/80x90.pngC/O https://placeholder.com">
+            <img src="https://user-images.githubusercontent.com/99520664/167271838-ff56a683-84ac-4457-b97a-ada6791b08fd.PNG" height="500" width="480" alt="grey momma squirrel">
             <p>
                 Name: Momma <br>
                 Age: 4<br>
                 About: Momma squirrel is one of our oldest squirrels, yes her name came about because she has had several litters and was known to bring how babies to the house of the fine folks who first learned about her. She is a very sweet docile squirrel who knows how to charm people out of every walnut they have.
             </p>
-            <img src="https://via.placeholder.com/80x90.pngC/O https://placeholder.com">
+            <img src="https://user-images.githubusercontent.com/99520664/167271830-cff4c0cd-801e-4e45-88e2-5ca4524376e2.jpg" height="500" width="500" alt="douglas squirrel">
             <p>
                 Name: Dougie<br>
                 Age: 2<br>
                 About: Dougie is actually the native squirrel in Washington state, he is a douglas squirrel which is lumped under the "red squirrel" name. Although he is about 2/3s the size of the average grey squirrel. Dougie is very lively and can be territorial, he is not afraid to throw his little weight around to defend his pile of walnuts. When he is unhappy you will hear about it by way of his squeeks
             </p>
+            <hr/>
         </section>
         <section>
 
