--- a/index.html
+++ b/index.html
@@ -59,6 +59,12 @@
                 Age: 2<br>
                 About: Dougie is actually the native squirrel in Washington state, he is a douglas squirrel which is lumped under the "red squirrel" name. Although he is about 2/3s the size of the average grey squirrel. Dougie is very lively and can be territorial, he is not afraid to throw his little weight around to defend his pile of walnuts. When he is unhappy you will hear about it by way of his squeeks
             </p>
+            <img src="">
+            <p>
+                Name: Baby<br>
+                Age: 1<br>
+                About: Baby is an avid eater, this guy loves his avocados. He has a great big fluffy tail and spends his time inbetween meals fluffing the tail.
+            </p>
             <hr/>
         </section>
         <section>
