--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <script src="app4.js"></script>
     <header>
         <h1>Adopt A Squirrel</h1>
+        <h2><script src="app1.js"></script></h2>
         <nav>
             <ul>
                <a><li>FAQ</li></a>
@@ -28,6 +30,7 @@
     <hr/>
     <main>
         <section>
+            <script src="app3.js"></script>
             <img class="first" src="https://i.pinimg.com/736x/66/8e/96/668e966958059c13bdaec1cf24d8cd6a--tree-roots-norse-mythology.jpg" alt="Norse squirrel">
             <h4>Did you know?</h4>
             <p>
@@ -55,6 +58,7 @@
                 About: Momma squirrel is one of our oldest squirrels, yes her name came about because she has had several litters and was known to bring how babies to the house of the fine folks who first learned about her. She is a very sweet docile squirrel who knows how to charm people out of every walnut they have.
             </p>
             <img src="https://user-images.githubusercontent.com/99520664/167271830-cff4c0cd-801e-4e45-88e2-5ca4524376e2.jpg" height="500" width="500" alt="douglas squirrel">
+            <h3><script src="app2.js"></script></h3>
             <p>
                 Name: <span style="font: 2em fantasy; color:rgb(168, 100, 168);">Dougie</span><br>
                 Age: 2<br>
@@ -79,5 +83,7 @@
      &#169Copyright Douglas Squirrel institute
      </span>
         </footer>
+
+        <a>text</a>
 </body>
 </html>
