--- a/index.html
+++ b/index.html
@@ -7,15 +7,25 @@
     <title>Adopt a Squirrel</title>
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="app1.js"></script>
+    <!-- <script src="app2.js"></script> -->
+    <script src="app3.js"></script>
+    
 </head>
 <body>
     <!--<script src="app4.js"></script>-->
-    <script>seeSquirrels();</script>
+    <!-- <script>seeSquirrels();</script> -->
+    <!-- <script>guessingGame();</script> -->
     <header>
         <h1>Adopt A Squirrel</h1>
         <!--<script src="app1.js"></script>-->
         <h2><script>welcomeHomePage();</script></h2>
+          
         <nav>
+            <ul>
+               <p>how the squirrels rate you as a bud (1-5):</p>
+                <script>acornRating();</script>
+
+            </ul>
             <ul>
                <a><li>FAQ</li></a>
                <a><li>Adopt</li></a>
@@ -34,10 +44,12 @@
     <main>
         <section>
             <!--<script src="app3.js"></script>-->
-            <script>fatSquirrel();</script>
+            <!-- <script>fatSquirrel();</script> -->
             <img class="first" src="https://i.pinimg.com/736x/66/8e/96/668e966958059c13bdaec1cf24d8cd6a--tree-roots-norse-mythology.jpg" alt="Norse squirrel">
+
             <h4>Did you know?</h4>
             <p>
+                <script>guessingGame();</script>
                 In Norse mythology a squirrel named "Ratatoskr" Was the carrier of information and would climb both up and down the tree of life, to deliver news from the eagle up top and the serpant who would dwell below near the roots of the tree of life.
             </p>
             <h4>Today they are known alittle different</h4>
@@ -88,7 +100,5 @@
      &#169Copyright Douglas Squirrel institute
      </span>
         </footer>
-
-        <a>text</a>
 </body>
 </html>
