--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="app1.js"></script>
     <!-- <script src="app2.js"></script> -->
-    <script src="app3.js"></script>
+    <!-- <script src="app3.js"></script> -->
     
 </head>
 <body>
