--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <link rel="stylesheet" href="style.css" type="text/css">
     <script src="app1.js"></script>
     <!-- <script src="app2.js"></script> -->
-    <!-- <script src="app3.js"></script> -->
+    <script src="app3.js"></script>
+    <script>forLoops();</script>
     
 </head>
 <body>
@@ -44,7 +45,7 @@
     <main>
         <section>
             
-            <!-- <script>fatSquirrel();</script> -->
+            <script>fatSquirrel();</script>
             <img class="first" src="https://i.pinimg.com/736x/66/8e/96/668e966958059c13bdaec1cf24d8cd6a--tree-roots-norse-mythology.jpg" alt="Norse squirrel">
 
             <h4>Did you know?</h4>
@@ -60,6 +61,7 @@
             </p>
         </section>
         <section>
+            <script>whoIsTheQueen();</script>
             <h2>Meet The Squirrels</h2>
             <img src="https://user-images.githubusercontent.com/99520664/167271869-285510bb-dd84-4729-847d-6cfbc7eaedef.jpg" height="500" width="500" alt="crazy girl squirrel">
             <p>
@@ -67,6 +69,7 @@
                 Age: 2<br>
                 About: Crazy girl is a very lively, dominant female who first got her name because as a kit she was the most playful of the bunch, although she does still play she is known as an "alpha" squirrel.
              </p>
+             <script>whosBirthday();</script>
             <img src="https://user-images.githubusercontent.com/99520664/167271838-ff56a683-84ac-4457-b97a-ada6791b08fd.PNG" height="500" width="400" alt="grey momma squirrel">
             <p>
                 Name: <span style=" font: 2em Apple Chancery, cursive;color: blueviolet;">Momma</span> <br>
@@ -86,6 +89,7 @@
     </main>
         <footer>
         <form>
+            <!-- <script>add();</script> -->
             <label for="addEmail">Join Mailing list</label>
             <input type="text" placeholder="Email">
             <button>Send</button>
